test/trivial/deitz/vars-scopes/infer1.chpl
proc main() {
  var x;
  x += 2;
  writeln(x);
}
